2000-08-20  Christian Krone  <krischan@sql.de>

	* src/jacl/tcl/lang/LsearchCmd.java: Update
	lsearch command to be 8.4 compatible.
	* tests/tcl/LsearchCmd.test: Remove.
	* tests/tcl/lsearch.test: Add 8.4 test cases.

2000-08-20  Christian Krone  <krischan@sql.de>

	* src/jacl/tcl/lang/Expression.java (ExprGetValue):
	Expressions with &&, || or ?: now accept boolean string values.

2000-08-20  Christian Krone  <krischan@sql.de>

	* src/jacl/tcl/lang/Expression.java (DoubleTooSmall,
	ExprLooksLikeInt): Check for ARITH UNDERFLOW, rename
	ExprLooksLikeInt to looksLikeInt.
	* src/jacl/tcl/lang/Parser.java (parseVar, backslash):
	No Exception, when parsing the following command: "set $a(foo".
	Correct handling for \x123 characters with its 8th bit set (>= \x80).
	* src/jacl/tcl/lang/StringCmd.java: 8.4 compatible string command.
	* src/jacl/tcl/lang/TclByteArray.java (toString): And a byte
	with 0xff to produce a char.
	* src/jacl/tcl/lang/Util.java (strtoul, toTitle): 0X123 will now
	be detected as valid hex number. 8.4 compatible error message for
	bad octal numbers. Add toTitle method to support string command.
	* tests/tcl/string.test: 8.4 compatible tests for string command.

2000-08-20  Christian Krone  <krischan@sql.de>

	* src/jacl/tcl/lang/FileCmd.java: Don't
	back up over multiple dots in a file
	extension. This matches the behavior
	of newer versions of Tcl.

2000-08-20  Christian Krone  <krischan@sql.de>

	* src/jacl/tcl/lang/ClockCmd.java:
	* tests/tcl/clock.test: Update Jacl's clock
	command to be Tcl 8.4 compliant.

2000-08-20  Christian Krone  <krischan@sql.de>

	* configure.in: Pass -ms5m -mx22m in JAVA_FLAGS.
	* diffs.txt: Add note about new interp command.
	* jaclsh.in: Dont set JAVA_FLAGS here.
	* new_features.txt: Add note about new interp command.
	* src/jacl/tcl/lang/BgErrorMgr.java (processIdleEvent):
	Add calls to Interp.preserve() and Interp.release().
	* src/jacl/tcl/lang/CatchCmd.java:
	Add call to Interp.resetResult().