@@ -11,7 +11,12 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: lreplace.test,v 1.1.1.1 1998/10/14 21:09:25 cvsadmin Exp $
+# RCS: @(#) $Id: lreplace.test,v 1.7 2000/04/10 17:19:01 ericm Exp $
+
+#if {[lsearch [namespace children] ::tcltest] == -1} {
+#    package require tcltest
+#    namespace import -force ::tcltest::*
+#}
 
 if {[string compare test [info procs test]] == 1} then {source defs}
 
@@ -90,6 +95,13 @@ test lreplace-1.24 {lreplace command} {
 test lreplace-1.25 {lreplace command} {
     concat \"[lreplace {\}\     hello} end end]\"
 } {"\}\ "}
+test lreplace-1.26 {lreplace command} {
+    catch {unset foo}
+    set foo {a b}
+    list [set foo [lreplace $foo end end]] \
+        [set foo [lreplace $foo end end]] \
+        [set foo [lreplace $foo end end]]
+} {a {} {}}
 
 
 test lreplace-2.1 {lreplace errors} {
@@ -124,3 +136,5 @@ test lreplace-3.1 {lreplace won't modify shared argument objects} {
 
 # cleanup
 catch {unset foo}
+#::tcltest::cleanupTests
+#return
